feat: locationSummary 계산 적용 #58