@@ -1,16 +1,13 @@
 package com.ssafy.jjtrip.domain.trip.service;
 
-import com.ssafy.jjtrip.domain.trip.entity.Trip;
 import com.ssafy.jjtrip.domain.trip.entity.TripItem;
 import com.ssafy.jjtrip.domain.trip.exception.TripErrorCode;
 import com.ssafy.jjtrip.domain.trip.exception.TripException;
 import com.ssafy.jjtrip.domain.trip.mapper.TripMapper;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,49 +17,50 @@ public class LocationSummaryService {
     private final TripMapper tripMapper;
 
     public void updateLocationSummary(Long tripId) {
-        Trip trip = tripMapper.selectById(tripId)
+        tripMapper.selectById(tripId)
                 .orElseThrow(() -> new TripException(TripErrorCode.TRIP_NOT_FOUND));
 
         List<TripItem> items = tripMapper.selectItemsWithSpotsByTripId(tripId);
+
         List<String> addresses = items.stream()
-                .map(item -> item.getSpot().getAddress())
-                .collect(Collectors.toList());
+                .map(i -> i.getSpot().getAddress())
+                .filter(a -> a != null && !a.isBlank())
+                .toList();
 
-        String locationSummary = calculateLongestCommonPrefix(addresses);
+        String locationSummary = calculateLocationSummary(addresses);
 
-        trip.setLocationSummary(locationSummary);
-        tripMapper.update(trip);
+        tripMapper.updateLocationSummary(tripId, locationSummary);
+    }
+
+    private String calculateLocationSummary(List<String> addresses) {
+        if (addresses == null || addresses.isEmpty()) return "";
+
+        // 1개면 "시/도 + 구/군" 정도
+        String[] parts = addresses.get(0).split(" ");
+        if (addresses.size() == 1) {
+            return parts.length >= 2 ? parts[0] + " " + parts[1] : parts[0];
+        }
+
+        // 기존 로직(공통 prefix 기반) 사용
+        return calculateLongestCommonPrefix(addresses);
     }
 
     private String calculateLongestCommonPrefix(List<String> addresses) {
-        if (addresses == null || addresses.isEmpty()) {
-            return "";
-        }
-
-        String[] firstAddressParts = addresses.get(0).split(" ");
-        if (addresses.size() == 1) {
-            return firstAddressParts.length > 1 ? firstAddressParts[0] + " " + firstAddressParts[1] : firstAddressParts[0];
-        }
-
-        String firstAddress = addresses.get(0);
-        int commonPrefixLength = firstAddress.length();
+        String first = addresses.get(0);
+        int len = first.length();
 
         for (int i = 1; i < addresses.size(); i++) {
-            commonPrefixLength = Math.min(commonPrefixLength, addresses.get(i).length());
-            for (int j = 0; j < commonPrefixLength; j++) {
-                if (firstAddress.charAt(j) != addresses.get(i).charAt(j)) {
-                    commonPrefixLength = j;
+            len = Math.min(len, addresses.get(i).length());
+            for (int j = 0; j < len; j++) {
+                if (first.charAt(j) != addresses.get(i).charAt(j)) {
+                    len = j;
                     break;
                 }
             }
         }
 
-        String commonPrefix = firstAddress.substring(0, commonPrefixLength);
-        int lastSpace = commonPrefix.lastIndexOf(' ');
-        if (lastSpace != -1) {
-            return commonPrefix.substring(0, lastSpace).trim();
-        } else {
-            return commonPrefix.trim();
-        }
+        String prefix = first.substring(0, len);
+        int lastSpace = prefix.lastIndexOf(' ');
+        return (lastSpace != -1) ? prefix.substring(0, lastSpace).trim() : prefix.trim();
     }
 }
